# anput

./: .gitignore  Cargo.toml  README.md  justfile
bench/: Cargo.toml
bench/benches/: ecs.rs
bench/src/: lib.rs
crate/: Cargo.toml
crate/examples/: 00_entities.rs  01_components.rs  02_resources.rs  03_systems.rs  04_queries.rs  06_scheduler.rs  07_system_locals.rs  08_entity_relations.rs  10_actors.rs  11_change_detection.rs  11_command_buffer.rs  12_change_detection.rs  13_observer.rs  14_prefabs.rs  15_savefile.rs  15_world_streaming.rs  16_nested_worlds.rs  16_world_streaming.rs  17_database.rs  19_world_views.rs  20_async_jobs.rs  22_traverse_relations.rs  ecosystem.rs
crate/src/: actor.rs  archetype.rs  bundle.rs  commands.rs  component.rs  database.rs  entity.rs  jobs.rs  lib.rs  multiverse.rs  observer.rs  prefab.rs  processor.rs  query.rs  resources.rs  scheduler.rs  systems.rs  universe.rs  view.rs  world.rs
crates/_/: Cargo.toml
crates/_/examples/: 00_entities.rs  01_components.rs  02_resources.rs  03_systems.rs  04_queries.rs  05_lookups.rs  06_lookups.rs  06_scheduler.rs  07_system_locals.rs  08_entity_relations.rs  09_actors.rs  10_command_buffer.rs  11_change_detection.rs  12_change_detection.rs  12_observer.rs  13_observer.rs  13_prefabs.rs  14_prefabs.rs  14_savefile.rs  15_savefile.rs  15_world_streaming.rs  16_nested_worlds.rs  16_world_streaming.rs  17_database.rs  17_nested_worlds.rs  18_database.rs  18_world_views.rs  19_async_jobs.rs  19_world_views.rs  20_async_jobs.rs  20_parallel_schedule.rs  21_parallel_schedule.rs  21_traverse_relations.rs  22_events.rs  ecosystem.rs  snapshot.save
crates/_/src/: actor.rs  archetype.rs  bundle.rs  commands.rs  entity.rs  event.rs  lib.rs  multiverse.rs  observer.rs  prefab.rs  query.rs  resources.rs  scheduler.rs  systems.rs  universe.rs  view.rs  world.rs
crates/generator/: Cargo.toml
crates/jobs/: Cargo.toml
crates/jobs/src/: coroutine.rs  lib.rs
crates/physics/: Cargo.toml  Readme.md
crates/physics/src/: collisions.rs  components.rs  lib.rs  solvers.rs  utils.rs
crates/physics/src/constraints/: distance.rs
crates/physics/src/density_fields/: aabb.rs  addition.rs  cube.rs  mod.rs  multiplication.rs  sphere.rs  subtraction.rs
crates/physics/src/queries/: point.rs  shape.rs
crates/promise/: Cargo.toml
crates/spatial/: Cargo.toml
crates/spatial/examples/: spatial_partitioning.rs
crates/spatial/src/: lib.rs
demo/: Cargo.toml
demo/assets/: logo.txt
demo/src/: components.rs  control_player.rs  diagnostics.rs  game.rs  main.rs  resources.rs  utils.rs
demo/src/components/: drawable.rs  mod.rs  position.rs  sprite.rs  text.rs
demo/src/game_states/: main_menu.rs
demo/src/renderers/: mod.rs
demo/src/resources/: assets.rs  camera.rs  game_state.rs  mod.rs
demo/src/systems/: contacts_renderer.rs  control_bodies.rs  control_player.rs  density_field_renderer.rs  mod.rs  object_renderer.rs  render.rs
demo/src/utils/: grid.rs  image.rs  mod.rs
plugins/spatial/: Cargo.toml
plugins/spatial/src/: lib.rs
