[package]
name = "anput"
version = "0.11.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Scriptable Entity-Component-System (powered by Intuicio)"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anput"
repository = "https://github.com/PsichiX/anput"
documentation = "https://docs.rs/anput"
readme = "../README.md"

[features]
default = ["async"]
deadlock-trace = []
async = ["tokio"]

[dependencies]
intuicio-data = "0.45"
intuicio-core = "0.45"
intuicio-derive = "0.45"
intuicio-framework-serde = "0.45"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.43", features = ["rt"], optional = true }

[dev-dependencies]
rand = "0.8"
serde_json = "1"
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "macros"] }
