[package]
name = "demo"
version = "0.19.2"
edition = "2024"
publish = false

[dependencies]
anput = { version = "0.19", path = "../crates/_" }
anput-physics = { version = "0.19", path = "../crates/physics" }
spitfire-core = "0.36"
spitfire-glow = "0.36"
spitfire-fontdue = "0.36"
spitfire-draw = "0.36"
spitfire-input = "0.36"
spitfire-gui = "0.36"
glutin = "0.28"
send_wrapper = "0.6"
tracing-subscriber = "0.3"
tracing-chrome = "0.7"
