[package]
name = "anput"
version = "0.15.7"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Scriptable Entity-Component-System (powered by Intuicio)"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anput"
repository = "https://github.com/PsichiX/anput"
documentation = "https://docs.rs/anput"
readme = "../../README.md"

[features]
deadlock-trace = ["anput-jobs/deadlock-trace"]

[dependencies]
anput-jobs = { version = "0.15", path = "../jobs" }
intuicio-data = "0.46"
intuicio-core = "0.46"
intuicio-derive = "0.46"
intuicio-framework-serde = "0.46"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rand = "0.9"
serde_json = "1"
