[package]
name = "anput"
version = "0.19.0"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Scriptable Entity-Component-System (powered by Intuicio)"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anput"
repository = "https://github.com/PsichiX/anput"
documentation = "https://docs.rs/anput"
readme = "../../README.md"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
deadlock-trace = ["anput-jobs/deadlock-trace"]

[dependencies]
anput-jobs = { version = "0.19", path = "../jobs" }
intuicio-data = "0.47"
intuicio-core = "0.47"
intuicio-derive = "0.47"
intuicio-framework-serde = "0.47"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
rand = "0.9"
serde_json = "1"
