[package]
name = "anput-generator"
version = "0.20.1"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Async generator library"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anput"
repository = "https://github.com/PsichiX/anput"
documentation = "https://docs.rs/anput-generator"
readme = "../../README.md"

[dependencies]
