[package]
name = "anput-jobs"
version = "0.15.6"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Jobs plugin for Anput ECS"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anput"
repository = "https://github.com/PsichiX/anput"
documentation = "https://docs.rs/anput-jobs"
readme = "../../README.md"

[features]
deadlock-trace = []

[dependencies]
intuicio-data = "0.46"
typid = "1"
