[package]
name = "anput-jobs"
version = "0.19.1"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Jobs plugin for Anput ECS"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anput"
repository = "https://github.com/PsichiX/anput"
documentation = "https://docs.rs/anput-jobs"
readme = "../../README.md"

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
deadlock-trace = []

[dependencies]
intuicio-data = "0.47"
typid = "1"
tracing = { version = "0.1", optional = true }
