[package]
name = "anput-promise"
version = "0.20.3"
edition = "2024"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
description = "Async promise library"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/anput"
repository = "https://github.com/PsichiX/anput"
documentation = "https://docs.rs/anput-promise"
readme = "../../README.md"

[dev-dependencies]
pollster = { version = "0.4", features = ["macro"] }
